# Camera_requiem_fork

./: .gitignore  README.md  camera_test.py  main.py  pyproject.toml  requirements.txt  test.py
bot/: input_validation.py  telegram_bot.py
data/: create_db.py  db.py  models.py  repository.py  storage.py
image_analyz/: analyzer.py
image_analyz/metrics/: __init__.py  chromatic_aberration.py  color.py  glare.py  noise.py  sharpness.py  vignetting.py
resources/: titles.txt
tests/: colors.py  noise.py  sharpness.py
